update white space bug arround navbar

--- a/styles/index.css
+++ b/styles/index.css
@@ -19,6 +19,7 @@ Meldungen (errors oder succes nachrichten, mittig anzeigen lassen)
   /*-- Navigationsleiste --*/
   .navbar {
     background:#005ea9;
+    margin-bottom: -24px;
   }
   .nav-link,
   .navbar-brand {
