--- a/styles/platinenundnutzenindex.css
+++ b/styles/platinenundnutzenindex.css
@@ -22,6 +22,7 @@ h2 {
    .navbar {
     background:#005ea9;
     position: relative;
+    margin-top: -24px;
   }
 
 
